Updated some labels

--- a/examples/Collision/CollisionExample.html
+++ b/examples/Collision/CollisionExample.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.2.0/prototype.js"></script>
-    <script src="../../libraries/RStarAttempt.js"></script>
+    <script src="../../libraries/SillyBinaryTree.js"></script>
     <script src="../Collision/script/easeljs.js"></script>
     <script src="../Collision/script/collision.js"></script>
     
